--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
     <div class="subContainer">
-        <h2>LOGIN for gym</h2>
+        <h2>LOGIN form gym</h2>
             <form action="">
                 <div class="form-container">
                     <label for="">Username</label><br>
@@ -25,7 +25,7 @@
                     <input type="password" placeholder="Type your password">
                 </div>
                 <div class="form-container">
-                    <button>LOGIN</button>
+                    <button>LOGIN HERE</button>
                 </div>
 
             </form>
